--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -160,6 +160,16 @@
       "title": "行程"
     },
     "layers": {
+      "category": {
+        "base-layers": "Base layers",
+        "country": "Country",
+        "europe": "Europe",
+        "europe-monolingual": "Europe monolingual",
+        "overlays": "Overlays",
+        "worldwide": "Worldwide",
+        "worldwide-international": "Worldwide international",
+        "worldwide-monolingual": "Worldwide monolingual"
+      },
       "collapse": "Collapse all",
       "custom-layers": "自定義圖層",
       "customize": "新增或移除自定義圖層",
